# pandas-intervals

./: .gitignore  README.md  core.py  pyproject.toml  requirements-dev.txt  requirements.txt
pandas_intervals/: __init__.py  core.py  examples.py  interval_ops.py  interval_utils.py  intervals_accessor.py  utils.py  vis.py
pandas_intervals/ops/: __init__.py  combine.py  complement.py  difference.py  intersection.py  nearest.py  overlap.py  truncate.py
pandas_intervals/ops/basic/: __init__.py  combine.py  complement.py  intersection.py  nearest.py  overlap.py  truncate.py
tests/: conftest.py  helpers.py  test_core.py  test_examples.py  test_helpers.py  test_intervals_accessor.py
tests/acceptance/: conftest.py  test_ops.py
tests/acceptance/ops/: test_combine.py  test_complement.py  test_intersection.py  test_nearest.py  test_overlap.py  test_truncate.py
tests/integration/: test_core.py  test_examples.py  test_intervals_accessor.py
tests/ops/: test_combine.py  test_complement.py  test_difference.py  test_intersection.py  test_nearest.py  test_overlap.py  test_truncate.py
tests/unit/ops/: test_combine.py  test_complement.py  test_intersection.py  test_nearest.py  test_overlap.py  test_truncate.py
