[tool.poetry]
name = "pandas-intervals"
version = "1.0.0"
description = "Pandas extention for Dataframes of intervals"
authors = ["BlakeJC94 <blakejamescook@gmail.com>"]
license = "GPL-v3.0"
readme = "README.md"
packages = [{include = "pandas_intervals"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "<=1.6.3"
plotly = "^5.16.0"
numpy = "1.24.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
ruff = "^0.0.282"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-continue-on-failure"
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL NUMBER"
markers = [
    "slow: mark test as slow to run",
]
# filterwarnings = [
#     "ignore:PLACEHOLDER is deprecated:DeprecationWarning",
# ]
